force-app/main/default/objects/UtilityStatementFile__c/UtilityStatementFile__c.object-meta.xml
<CustomObject>
    <label>Utility Statement File</label>
    <nameField>
        <label>Utility Statement File Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Utility Statement Files</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>