force-app/main/default/objects/UtilityStatementFile__c/fields/CreatedDateInArcadia__c.field-meta.xml
<CustomField>
    <fullName>CreatedDateInArcadia__c</fullName>
    <label>Created Date in Arcadia</label>
    <type>DateTime</type>
</CustomField>