force-app/main/default/objects/UtilityStatementFile__c/fields/EntityId__c.field-meta.xml
<CustomField>
    <fullName>EntityId__c</fullName>
    <externalId>true</externalId>
    <label>Entity ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>