force-app/main/default/objects/UtilityStatementFile__c/fields/StatementId__c.field-meta.xml
<CustomField>
    <fullName>StatementId__c</fullName>
    <label>Statement Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>