force-app/main/default/objects/UtilityStatementFile__c/fields/Supplier__c.field-meta.xml
<CustomField>
    <fullName>Supplier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supplier</label>
    <referenceTo>Supplier</referenceTo>
    <relationshipLabel>Utility Statement Files</relationshipLabel>
    <relationshipName>UtilityStatementFiles</relationshipName>
    <type>Lookup</type>
</CustomField>